# Mill

./: Dockerfile  LICENSE  README.md  bl.py  build.py  main.py  part2.py  pyproject.toml  ttt.py
client/: bl.py  client.py  main.py  part2.py  server_client.py
flet_client/: main.py
infra/: mill-server-deploy.yaml  mill-service.yaml
server/: exceptions.py  main.py  schemas.py
