[tool.poetry]
name = "mill"
version = "0.1.0"
description = ""
authors = []
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
flet = "^0.19.0"


[tool.poetry.group.client.dependencies]
pygame = "^2.5.2"
httpx = "^0.24.1"


[tool.poetry.group.server.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
